@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fixes for regressions in linked attachment behavior.
 * [mms] Catch invalid characters in user-defined flag names (Bug #12335).
 * [mms] Workaround IE javascript limitations preventing attachments from being uploaded in dynamic view.
 * [mms] Remember mailbox list position when viewing messages in smartmobile view.
@@ -3212,6 +3213,7 @@
    <date>2013-06-04</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fixes for regressions in linked attachment behavior.
 * [mms] Catch invalid characters in user-defined flag names (Bug #12335).
 * [mms] Workaround IE javascript limitations preventing attachments from being uploaded in dynamic view.
 * [mms] Remember mailbox list position when viewing messages in smartmobile view.
